# rust-workshop-2023

./: readme.md
actix_1/: Cargo.toml
actix_1/src/: main.rs
circular_buffer/: Cargo.toml
circular_buffer/src/: main.rs
circular_buffer2/: Cargo.toml
circular_buffer2/src/: main.rs
circular_buffer_chatgpt/: Cargo.toml
circular_buffer_chatgpt/src/: main.rs
circular_buffer_rwlock_chatgpt/: Cargo.toml
circular_buffer_rwlock_chatgpt/src/: main.rs
concurrency_1/: Cargo.toml
concurrency_1/src/: main.rs
concurrency_2/: Cargo.toml
concurrency_2/src/: main.rs
example_struct/src/: main.rs
hello2/src/: main.rs
prime/src/: main.rs
prime_chatgpt_1/: Cargo.toml
prime_chatgpt_1/src/: main.rs
prime_chatgpt_2/: Cargo.toml
prime_chatgpt_2/src/: main.rs
udp-msearch/: Cargo.toml
udp-msearch/src/: main.rs
upnp_client_v1/: Cargo.toml
upnp_discover/: Cargo.toml
upnp_discover/src/: main.rs
ws-circular-buffer/circular-buffer-v1/src/: main.rs
ws-circular-buffer/circular-buffer-v2/src/: main.rs
ws-circular-buffer/circular-buffer-v3-borrowed/src/: main.rs
ws-circular-buffer/circular-buffer-v3/src/: main.rs
ws-circular-buffer/circular-buffer-v4/src/: main.rs
ws-circular-buffer/circular-buffer-v5/src/: main.rs
ws-primes/primes-v1-iterator/src/: main.rs
ws-primes/primes-v1/src/: main.rs
ws-primes/primes-v2/src/: main.rs
ws-primes/primes-v3/src/: main.rs
ws-rust-in-c/: build-and-run.sh  main.c  rust-lib.h
ws-rust-in-c/rust-lib/: Cargo.toml
ws-rust-in-c/rust-lib/src/: lib.rs
ws-threads/src/: main.rs
