[package]
name = "upnp_discover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
upnp-client = "0.1.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.25"
colored_json = "3.0.1"
